# merge-commit-mayhem

./: .coverage  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  ASSET_LICENSE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  godot-check.yml
app/: main.py  protocol.py  ws.py
app/game/: ai_flavor.py  game_map.py  game_room.py  kinds_registry.py  llm.py  metrics_aggregate.py  metrics_export.py  models.py  roles.py  room_code.py  rooms.py  runtime.py  sabotages.py  tasks.py  voting.py  walls.py
docs/: ARCHITECTURE.md  ASSET_SPEC.md  CLIENT.md  DEPLOY.md  DEV.md  GAME_OVERVIEW.md  GODOT-DEV-WITH-CLAUDE.md  GODOT-TRANSITION.md  GODOT_HANDOFF.md  HANDOFF-2026-04-25.md  HOWTO-MINIGAME.md  HOWTO-ROLE.md  HOWTO-SABOTAGE.md  PRE-GODOT-CLEANUP.md  PROTOCOL.md  README.md  ROADMAP.md  STATE-AND-ROADMAP.md  maps.md
godot/: README.md  project.godot
godot-3d/: export_presets.cfg  project.godot
godot-3d/assets/: IMPORT_MANIFEST.txt  KAYKIT_LICENSE.txt
godot-3d/maps/: datacenter.json  default.json
godot-3d/scenes/: character.tscn  demo_world.tscn  demo_world_followcam.tscn  hud.tscn  main.tscn  pause_menu.tscn  test_world.tscn  world.tscn
godot-3d/scripts/: character.gd  demo_world.gd  demo_world_followcam.gd  hud.gd  input_sender.gd  kinds_loader.gd  main.gd  map_builder.gd  mini_game_modal.gd  pause_menu.gd  protocol.gd  test_world.gd  world.gd  ws_client.gd
godot/scenes/: debug_world.tscn  main.tscn
godot/scripts/: debug_renderer.gd  input_sender.gd  main.gd  protocol.gd  ws_client.gd
images/: README.md
maps/: datacenter.json  default.json  kinds.json  office_complex.json  small.json
merge_conflict_mayhem_project/: MASTER_Merge_Conflict_Mayhem.md  merge_conflict_mayhem_gesamtfeedback.md
merge_conflict_mayhem_project/docs/: 01_game_design.md  02_technical_architecture.md  03_websocket_protocol.md  04_opencode_prompts.md  05_asset_pack_master_prompt.md  06_asset_checklist.md  07_visual_direction.md  08_roadmap_and_contribution.md  09_first_sprint_plan.md  10_merge_conflict_mayhem_ki_ideen.md  (+1 more)
scripts/: create_datacenter.py  deploy.sh  godot-3d-serve.py  godot-check.sh  godot-web-export.sh  import_kaykit_assets.py  migrate_walls_to_doors.py  perf_baseline.py  populate_datacenter.py  populate_office_complex.py
sounds/: CREDITS.md
static/: audio.js  endscreen.js  eventfeed.js  hud.js  index.html  input.js  kinds.js  landing.css  landing.html  landing.js  main.js  meetings.js  menu.js  render.js  report.js  role_intro.js  sabotages.js  spielprinzip.css  spielprinzip.html  sprites.js  styles.css  takedown.js  tasks.js  touch-controls.js  ws.js
tests/: conftest.py  test_body_report.py  test_bots_decision.py  test_bots_manager.py  test_bots_pathfinding.py  test_bots_ws.py  test_coffee_invariants.py  test_definitions.py  test_edge_cases.py  test_editor.py  test_event_feed.py  test_game_map.py  test_game_room.py  test_godot_web_mount.py  test_hardening.py  test_incidents.py  test_kinds_registry.py  test_landing.py  test_last_words.py  test_llm.py  test_map_objects.py  test_map_registry.py  test_maps_api.py  test_metrics_aggregate.py  test_metrics_export.py  test_migrate_walls_to_doors.py  test_minigame_cable_pairing.py  test_minigame_coffee_pour.py  test_minigame_concurrency.py  test_minigame_diff_review.py  test_minigame_framework.py  test_minigame_log_filter.py  test_minigame_release_notes.py  test_minigame_sprint_trim.py  test_minigame_stability_balance.py  test_minigame_test_suite_repair.py  test_personalized_state.py  test_protocol.py  test_reconnect_mid_phase.py  test_role_leak_regression.py  (+12 more)
tests-frontend/: editor-doors.test.js  editor-drag.test.js  editor-history.test.js  editor-kind-library.test.js  editor-state-roundtrip.test.js  eventfeed.test.js  hud.test.js  input-bugfixes.test.js  meetings.test.js  minigame-test-suite-repair.test.js  render-map-objects.test.js  smoke.test.js
(+60 files in other folders)
